# comfyui-photoshop-bridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
cpsb/: __init__.py  actions.py  annotate.py  compose_psd.py  context.py  handoff.py  launcher.py  live.py  load_psd.py  locality.py  nodes.py  psd_io.py  raster_io.py  routes.py  version.py  watcher.py
docs/: INSTALL.md  PROTOCOL.md  SPIKES.md
docs/roadmap/: README.md  ps-external-decode.md  realtime-drawing.md
examples/: README.md  annotate-qwen-image-edit.json  live_drawing_lcm.json
photoshop_plugin/: connection.js  exporter.js  handoffs.js  index.js  liveCreativity.js  liveMode.js  livePrompt.js  manifest.json  manualSend.js  panel.html  panel.js  prefs.js  previewPanel.js  runAction.js  saveListener.js  uploader.js
photoshop_plugin/Test-zoii1g/: manifest.json
photoshop_plugin/src/: connection.js  exporter.js  handoffs.js  index.js  log.js  panel.css  panel.html  panel.js  saveListener.js
scripts/: build_ccx.sh  bump_version.py
tests/: conftest.py  test_actions.py  test_annotate.py  test_bump_version.py  test_compose_psd.py  test_context.py  test_handoff.py  test_launcher.py  test_live.py  test_load_psd.py  test_locality.py  test_nodes.py  test_own_write_suppression.py  test_psd_io.py  test_routes.py  test_watcher.py
tests/fixtures/: README
web/: cpsb.js
web/cpsb/: annotate.js  api.js  badges.js  browse.js  compose.js  cpsb.css  gallery.js  live.js  loadpsd.js  menu.js  open.js  pasteback.js  settings.js  state.js  ui.js  version.js
